# tridiag-eigen

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: lib.rs  matrix.rs
