[package]
name = "tridiag-eigen"
version = "0.1.0"
edition = "2021"
authors = [
    "Thomas Versteeg <t.versteeg@cemsbv.io>"
]
description = "Numerical precise eigen decomposition for ill-conditioned symmetric tridiagonal matrices."
keywords = ["eigen", "eigenvalues", "nalgebra"]
categories = [
    "mathematics",
]
repository = "https://github.com/cemsbv/tridiag-eigen"
documentation = "https://docs.rs/tridiag-eigen/"
license = "MPL-2.0"
readme = "README.md"

[dependencies]
nalgebra = "0.32.3"
num-traits = "0.2.17"
smallvec = "1.13.1"

[dev-dependencies]
approx = "0.5.1"

# Enable LaTeX in Rust documentation
[package.metadata.docs.rs]
# To build locally use
#   RUSTDOCFLAGS="--html-in-header katex-header.html" cargo doc --no-deps --open
rustdoc-args = ["--html-in-header", "katex-header.html"]
